--- a/resume.hbs
+++ b/resume.hbs
@@ -12,9 +12,9 @@
 	</head>
 
 	<body>
-		<div id="resume">
+		<div id="resume" class="main wrapper">
 			{{#resume.basics}}
-				<header id="header" class="clear">
+				<header id="header" class="clear header">
 					{{#if picture}}
 						<img class="picture" src="{{picture}}" alt="{{name}}"/>
 						<div class="middle">
@@ -58,10 +58,10 @@
 						</span>
 					{{/location}}
 
-                    <div>born in {{placeOfBird}}, {{stateOfBird}} in {{dateOfBird}}</div>
+                    <div>Né à {{placeOfBird}}, {{stateOfBird}} le {{dateOfBird}}</div>
 
 
-					<div id="contact">
+					<div id="contact" class="contacts ">
 						{{#if website}}
 						<div class="website">
               <span class="fa fa-external-link"></span>
@@ -83,7 +83,7 @@
 					</div>
 
 					{{#if profiles.length}}
-					<div id="profiles">
+					<div id="profiles" class="profiles ">
 						{{#each profiles}}
 						<div class="item">
 							{{#if network}}
@@ -116,9 +116,9 @@
 			{{#if resume.skills.length}}
 				<section class="section margin1">
 					<header>
-						<h2 class='section-title'>Skills</h2>
+						<h2 class='section-title'>Compétences</h2>
 					</header>
-					<section id="skills">
+					<section id="skills" class="skills ">
 						{{#each resume.skills}}
 						<div class="item">
 							{{#if name}}
@@ -148,43 +148,48 @@
 			{{#if resume.work.length}}
 				<section class="section">
 					<header>
-						<h2 class='section-title'>Work Experience <span class="item-count">({{resume.work.length}})</span></h2>
+						<h2 class='section-title'>Expérience professionnelle <span class="item-count">({{resume.work.length}})</span></h2>
 					</header>
-					<section id="work">
+					<section id="work" class="works">
 						{{#each resume.work}}
 							{{#if company}}
 								<header>
-									<span class="space-left">
-										{{#if @first}}
-											<span class="fa fa-caret-down"></span>
-										{{else}}
-											<span class="fa fa-caret-right"></span>
-										{{/if}}
-									</span>
-									{{#if position}}
-									<div class="position">
-										{{position}}
-									</div>
-									{{/if}}
-									<div class="company">
-										{{company}}
-									</div>
-									<div class="date">
-										{{#if startDate}}
-										<span class="startDate">
-											{{MY startDate}}
-										</span>
-										{{/if}}
-										{{#if endDate}}
-										<span class="endDate">
-											- {{MY endDate}}
-										</span>
-										{{else}}
-										<span class="endDate">
-											- Current
-										</span>
-										{{/if}}
-									</div>
+                                    <div>
+    									<span class="space-left">
+    										{{#if @first}}
+    											<span class="fa fa-caret-down"></span>
+    										{{else}}
+    											<span class="fa fa-caret-right"></span>
+    										{{/if}}
+    									</span>
+    									{{#if position}}
+    									<div class="position">
+    										{{position}}
+    									</div>
+    									{{/if}}
+    									<div class="company">
+    										{{company}}
+    									</div>
+                                    </div>
+
+                                    <div>
+    									<div class="date">
+    										{{#if startDate}}
+    										<span class="startDate">
+    											{{MY startDate}}
+    										</span>
+    										{{/if}}
+    										{{#if endDate}}
+    										<span class="endDate">
+    											- {{MY endDate}}
+    										</span>
+    										{{else}}
+    										<span class="endDate">
+    											- Présent
+    										</span>
+    										{{/if}}
+    									</div>
+                                    <div>
 								</header>
 							{{/if}}
 
@@ -248,7 +253,7 @@
 			{{#if resume.volunteer.length}}
 				<section class="section">
 					<header>
-						<h2 class='section-title'>Volunteer</h2>
+						<h2 class='section-title'>Bénévolat</h2>
 					</header>
 					<section id="volunteer">
 						{{#each resume.volunteer}}
@@ -283,7 +288,7 @@
 										</span>
 										{{else}}
 										<span class="endDate">
-											- Current
+											- Présent
 										</span>
 										{{/if}}
 									</div>
@@ -350,7 +355,7 @@
 			{{#if resume.education.length}}
 				<section class="section">
 					<header>
-						<h2 class='section-title'>Education <span class="item-count">({{resume.education.length}})</span></h2>
+						<h2 class='section-title'>Formation <span class="item-count">({{resume.education.length}})</span></h2>
 					</header>
 					<section id="education">
 						{{#each resume.education}}
@@ -391,7 +396,7 @@
 									</span>
 									{{else}}
 									<span class="endDate">
-										- Current
+										- Présent
 									</span>
 									{{/if}}
 								</div>
@@ -450,7 +455,7 @@
 			{{#if resume.awards.length}}
 				<section class="section">
 					<header>
-						<h2 class='section-title'>Awards</h2>
+						<h2 class='section-title'>Récompenses</h2>
 					</header>
 					<section id="awards">
 					{{#each resume.awards}}
@@ -561,9 +566,9 @@
 			{{#if resume.languages.length}}
 				<section class="section margin1">
 					<header>
-						<h2 class='section-title'>Languages</h2>
+						<h2 class='section-title'>Langages</h2>
 					</header>
-					<section id="languages">
+					<section id="languages" class="languages ">
 						{{#each resume.languages}}
 							<div class="display">
 								{{#if language}}
@@ -588,9 +593,9 @@
 			{{#if resume.interests.length}}
 				<section class="section margin1">
 					<header>
-						<h2 class='section-title' class='section-title'>Interests</h2>
+						<h2 class='section-title' class='section-title'>Centres d'interêt</h2>
 					</header>
-					<section id="interests">
+					<section id="interests" class="interests ">
 						{{#each resume.interests}}
 							<div class="item">
 								{{#if name}}
@@ -617,9 +622,9 @@
 			{{#if resume.references.length}}
 				<section class="section">
 					<header>
-						<h2 class='section-title'>References</h2>
+						<h2 class='section-title'>Références</h2>
 					</header>
-					<section id="references">
+					<section id="references" class="references">
 						{{#each resume.references}}
 						<div class="item">
 							{{#if reference}}
