--- a/resume.hbs
+++ b/resume.hbs
@@ -58,7 +58,7 @@
 						</span>
 					{{/location}}
 
-                    <div>Né à {{placeOfBird}}, {{stateOfBird}} le {{dateOfBird}}</div>
+                    <div>Né à {{placeOfBird}}, ({{stateOfBird}}) le {{DMY dateOfBird}}</div>
 
 
 					<div id="contact" class="contacts ">
@@ -185,7 +185,7 @@
     										</span>
     										{{else}}
     										<span class="endDate">
-    											- Présent
+    											- présent
     										</span>
     										{{/if}}
     									</div>
@@ -288,7 +288,7 @@
 										</span>
 										{{else}}
 										<span class="endDate">
-											- Présent
+											- présent
 										</span>
 										{{/if}}
 									</div>
@@ -396,7 +396,7 @@
 									</span>
 									{{else}}
 									<span class="endDate">
-										- Présent
+										- présent
 									</span>
 									{{/if}}
 								</div>
