--- a/style.css
+++ b/style.css
@@ -172,7 +172,10 @@ section .location {
 .header .picture {
     width: 11em;
     float: right;
-    border-radius: 4px;
+  border-radius: 50%;
+  overflow: hidden;
+  padding: 5px;
+  display: inline-block;
 }
 
 .main-summary {
@@ -264,7 +267,7 @@ h2.section-title {
 .institution::before,
 .organization::before,
 .awarder::before {
-    content: "chez"
+    content: "à"
 }
 
 .company,
@@ -557,12 +560,12 @@ ul.courses li:hover {
         padding: 0;
         -ms-word-wrap: break-word;
         word-wrap: break-word;
-        line-height: 1.3;
+        line-height: 1.4;
         /*font-family: Arial, Georgia, "Lucida Grande", sans-serif;*/
     }
 
     @page {
-        margin: 1cm 1.4cm;
+        margin: 1cm 1.2cm;
     }
 
     .item-count {
@@ -573,7 +576,7 @@ ul.courses li:hover {
     .institution::before,
     .organization::before,
     .awarder::before {
-        content: "chez";
+        content: "à";
     }
 
     .main-summary {
@@ -587,6 +590,17 @@ ul.courses li:hover {
 
     .section header {
         padding-bottom: .15rem;
+    }
+
+    .section header .header-left {
+        float: left;
+        width: 70%;
+        word-break: break-all;
+    }
+
+    .section header .date {
+        float: right;
+        padding: .2em;
     }
 
     .section .location {
